@@ -98,4 +98,17 @@ This is a simple document to somehow collect the themes to write about:
                 </dependencies>
             </plugin>
 
-      ```
+      ```  * JSqlParser -> openCypher
+
+* streaming group by
+
+* microprofile rest client
+
+* menu with extra buttons layout (refer to older StackOverflow question)
+
+* -Djava.locale.providers=COMPAT,CLDR try to explain this strange jeps changes 
+
+* Nexus 3 configuration for maven
+  * Cleanup maven
+    * remove cleaned up artifacts
+    * clean snapshot multiple versions
